# a2a-events-python

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
conformance/fixtures/: cursors.json  errors.json  selectors.json
e2e/: Dockerfile  driver.py  publisher_service.py  run.sh  subscriber_service.py
examples/: quickstart.py
schemas/: error.schema.json  event.schema.json  selector.schema.json  subscription.schema.json  topic.schema.json
scripts/: export_schemas.py  sync_spec.py
src/a2a_events/: __init__.py  agentcard.py  auth.py  client.py  cursor.py  errors.py  grpc_binding.py  jsonrpc.py  lease.py  limits.py  methods.py  models.py  observability.py  pagination.py  receiver.py  schema_export.py  selectors.py  server.py  signing.py
src/a2a_events/runtime/: __init__.py  contracts.py  dispatcher.py  http_delivery.py  publisher.py  retention.py  retry_worker.py  ssrf.py
tests/: conftest.py  test_a2a_interop.py  test_agentcard.py  test_async_postgres.py  test_authorization.py  test_backlog_pagination.py  test_canonicalization.py  test_cloudevents_conformance.py  test_conformance.py  test_durable_dispatch.py  test_durable_subscriptions.py  test_end_to_end.py  test_grpc_binding.py  test_hardening.py  test_http_integration.py  test_http_json_binding.py  test_key_rotation.py  test_lease.py  test_observability.py  test_pagination_limits.py  test_pg_concurrency.py  test_protocol_guards.py  test_retention.py  test_retry_queue.py  test_selectors.py  test_ssrf.py  test_store_contract.py  test_subscription_store_contract.py  test_unit.py
(+10 files in other folders)
