[project]
name = "a2a-events"
version = "0.1.0"
description = "AgentCard-native durable event subscriptions for the A2A protocol"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "a2a-events contributors" }]
keywords = ["a2a", "agent2agent", "events", "pubsub", "cloudevents"]
dependencies = ["pydantic>=2.6", "cryptography>=42.0"]

[project.optional-dependencies]
server = ["fastapi>=0.110", "uvicorn>=0.29"]
client = ["httpx>=0.27"]
postgres = ["psycopg[binary]>=3.1", "psycopg-pool>=3.2"]
grpc = ["grpcio>=1.60"]
dev = [
    "black>=26.5.1",
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
    "fastapi>=0.110",
    "uvicorn>=0.29",
    "jsonschema>=4.21",
    "psycopg[binary]>=3.1",
    "psycopg-pool>=3.2",
    "grpcio>=1.60",
    "ruff>=0.4",
    "mypy>=1.10",
]

[project.urls]
Homepage = "https://github.com/a2a-events/a2a-events-python"
Specification = "https://github.com/a2a-events/a2a-events"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/a2a_events"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.black]
target-version = ["py311"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = true
ignore_missing_imports = true
